# netbox-portal-access

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
netbox_portal_access/: __init__.py  adapters.py  filters.py  forms.py  models.py  navigation.py  plugin.py  secrets.py  tables.py  tasks.py  template_content.py  urls.py  views.py
netbox_portal_access/api/: serializers.py  urls.py  views.py
netbox_portal_access/migrations/: 0001_initial.py  0002_alter_accessassignment_options_and_more.py  0003_portalcredential.py
netbox_portal_access/templates/netbox_portal_access/: object.html  portal_changelog.html  portal_credentials_panel.html
netbox_portal_access/templates/netbox_portal_access/inc/: portal_access_panel.html  portal_providers_access_panel.html
static/netbox_portal_access/: portal_form.js
